# kengdongBA

0301DirectG2oBA/: 0301DirectG2oBA.kdev4  3D_int.txt  3D_int1.txt  BA_fr1desk2_all.txt  BA日记.txt  CMakeLists.txt  directg2oBA-4-16.cpp  directg2oBA-5-5.cpp  directg2oBA.cpp  fr1desk2  fr1desk2.txt  points.txt  points2.txt  points_699.txt  points_7.txt  points_rgb1.txt  pose_all.txt  pose_rgb1.txt  pose_rgb11.txt  rgbd_dataset_freiburg1_xyz_results.txt  rgbd_dataset_freiburg1_xyz_results_ori.txt
0301DirectG2oBA/.kdev4/: 0301DirectG2oBA.kdev4
0301DirectG2oBA/result/: BA_fr1_desk2.txt  BA_fr1_rpy.txt  BA_fr1desk2_all_new.txt  BA_fr1rpy_all_new.txt  BA_rgbd_dataset_freiburg1_desk2_results.txt  rgbd_dataset_freiburg1_desk2_results50.txt  rgbd_dataset_freiburg1_rpy_results50.txt
